--- a/src/sass/pages/_event.scss
+++ b/src/sass/pages/_event.scss
@@ -53,7 +53,7 @@
             overflow: hidden;
 
             .image {
-
+                height: 400px;
 
                 img {
                     width: 100%;
