--- a/src/css/main.css
+++ b/src/css/main.css
@@ -175,17 +175,18 @@ footer .footer-image img {
 .slider-info .swiper .swiper-wrapper .swiper-slide span {
   font-size: 300px;
   position: absolute;
-  color: white;
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 3px #fff;
 }
 .slider-info .swiper .swiper-wrapper .swiper-slide .image {
   height: 500px;
-  width: 500px;
+  width: 550px;
   overflow: hidden;
   position: absolute;
+  opacity: 0.7;
 }
 .slider-info .swiper .swiper-wrapper .swiper-slide .image img {
   display: block;
@@ -649,6 +650,7 @@ footer .footer-image img {
 }
 .heading_sort .sort-form .searchForm input {
   border: none;
+  width: 90%;
   outline: none;
 }
 .heading_sort .event_card_container {
@@ -676,6 +678,7 @@ footer .footer-image img {
   flex-direction: column;
   gap: 1.3rem;
   padding: 0.8rem 0 0.8rem 1.1rem;
+  position: relative;
 }
 .heading_sort .event_card_container .item .cart-content h5 {
   color: #7a7a7a;
@@ -690,6 +693,19 @@ footer .footer-image img {
   font-weight: 500;
   font-size: 0.7rem;
   color: #7a7a7a;
+}
+.heading_sort .event_card_container .item .cart-content i {
+  position: absolute;
+  bottom: 15%;
+  right: 10%;
+  transform: translate(-10%, -15%);
+  font-size: 1.7rem;
+  cursor: pointer;
+  color: black;
+  transition: 0.3s linear;
+}
+.heading_sort .event_card_container .item .cart-content i:hover {
+  color: red;
 }
 
 @media (max-width: 991px) {
@@ -717,6 +733,66 @@ footer .footer-image img {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+#favorite-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 3rem;
+  margin-top: 3rem;
+}
+#favorite-list .event-card {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  border-radius: 9px;
+  margin-bottom: 3rem;
+}
+#favorite-list .event-card .favorites-img {
+  height: 200px;
+}
+#favorite-list .event-card .favorites-img .event-img {
+  width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+#favorite-list .event-card .event-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+  padding: 1rem;
+  position: relative;
+}
+#favorite-list .event-card .event-content .event-title {
+  color: #7a7a7a;
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+#favorite-list .event-card .event-content .event-venue {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+#favorite-list .event-card .event-content .event-date {
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: #7a7a7a;
+}
+#favorite-list .event-card .event-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.7rem 1rem;
+  background-color: #f9f9f9;
+  border-top: 1px solid #e0e0e0;
+}
+#favorite-list .event-card .event-footer .delete {
+  background-color: transparent;
+  border: none;
+  font-size: 1.2rem;
+  color: black;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+#favorite-list .event-card .event-footer .delete:hover {
+  color: red;
+}
+
 .detail-body {
   background: #F0F2F0;
   background: linear-gradient(to top, #000C40, #F0F2F0);
