--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./layout/footer";
 @import "./pages/home";
 @import "./pages/event";
+@import "./pages/favorites";
 @import "./pages/eventDetail";
 @import "./pages/user";
 @import "./pages/basket";
