--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -39,19 +39,19 @@
                 span {
                     font-size: 300px;
                     position: absolute;
-                    color: white;
-                    position: absolute;
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%, -50%);
+                    -webkit-text-fill-color: transparent;
+                    -webkit-text-stroke: 3px #fff;
                 }
 
                 .image {
                     height: 500px;
-                    width: 500px;
+                    width: 550px;
                     overflow: hidden;
                     position: absolute;
-
+                   opacity: .7;
                     img {
                         display: block;
                         width: 100%;
@@ -532,6 +532,7 @@
             grid-template-columns: repeat(1, 1fr);
         }
     }
+
     .contact-info {
         margin: 0;
 
