--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./pages/favorites";
 @import "./pages/eventDetail";
 @import "./pages/user";
+@import "./pages/admin";
 @import "./pages/basket";
 @import "./pages/login";
 @import "./pages/register";
