--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,41 +1,3 @@
-// header {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-around;
-//     background-color: transparent;
-//     margin-top: 13px;
-//     .logo {
-//         width: 12%;
-//         img {
-//             width: 100%;
-//             height: 100%;
-//             object-fit: cover;
-//         }
-//     }
-//     ul {
-//         display: flex;
-//         gap: 40px;
-//         li {
-// a {
-//     color: black;
-//     font-size: 20px;
-//     font-family: "Poppins";
-
-// }
-//         }
-//     }
-//     .register {
-//         display: flex;
-//         gap: 20px;
-//         a {
-//             font-size: 20px;
-//             color: white;
-//             padding: 12px 15px;
-//             border-radius: 60px;
-//             background-color: #FFF72D;
-//         }
-//     }
-// }
 header {
     display: flex;
     justify-content: space-between;
@@ -44,8 +6,10 @@ header {
     font-size: 20px;
     padding: 1.2rem 4rem;
     z-index: 999;
-    // position: absolute;
-    position: relative;
+
+    position: sticky;
+    top: 0;
+    border-bottom: 2px solid black;
     width: 100%;
     background: #fff;
 
@@ -90,6 +54,7 @@ header {
                         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
                         padding: 8px 12px;
                         z-index: 1;
+
                         a {
                             display: flex;
                             flex-direction: column;
