--- a/src/sass/pages/_basket.scss
+++ b/src/sass/pages/_basket.scss
@@ -1,7 +1,8 @@
 .basket-body {
     font-family: "Inter Tight";
 
-
+   .basket-main {
+    margin-top: 2rem;
     .basket {
         padding: 2rem 0;
         background-color: #f1f1f1;
@@ -25,22 +26,30 @@
                 margin-bottom: 2rem;
             }
 
+            .basket-items {
+                display: flex;
+                flex-direction: column;
+                gap: 17px;
+                p {
+                    font-size: 22px;
+                }
+
                 .basket-item {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
-
+    
                     .left-side {
                         display: flex;
                         justify-content: start;
                         gap: 20px;
-
+    
                         .basket-image {
                             width: 100px;
                             height: 100px;
                             border-radius: 20px;
                             overflow: hidden;
-
+    
                             img {
                                 width: 100%;
                                 height: 100%;
@@ -48,7 +57,7 @@
                                 overflow: hidden;
                             }
                         }
-
+    
                         .basket-item_info {
                             display: flex;
                             flex-direction: column;
@@ -56,57 +65,70 @@
                             gap: 10px;
                         }
                     }
-
+    
                     .right-side {
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         gap: 19px;
-
+                        
+                       
+    
                         .quantity {
                             display: flex;
                             flex-direction: column;
                             justify-content: center;
                             align-items: center;
-
+                            gap: 5px;
+                            .increase, .decrease {
+                                width: 100%;
+                            padding: 2px 11px;
+                            border-radius: 5px;
+                            color: white;
+                            font-size: 15px;
+                            border: none;
+                            // background-color: #007BFF;
+                            // background-color: #34C759;
+                            background-color: #4A90E2;
+                            // background-color: white;
+                            }
+                            
+    
                             i {
                                 border-radius: 50%;
                                 padding: 0.2rem;
                             }
                         }
-
+    
                         .basket-item_price {
                             padding: 1.5rem 1rem;
                             border-radius: 20px;
-                            // background-color: #FFDD00;
-                            // background-color: lightgray;
-                            // background-color: rgb(0, 123, 255);
                             background-color: rgb(14, 122, 254);
-
+    
                             span {
                                 color: white;
                                 font-weight: 600;
                                 font-size: 18px;
                             }
                         }
-
+    
                         .removeBtn {
                             padding: 0.9rem 1rem;
                             background-color: #FF8787;
                             border-radius: 50px;
                             border: 1px solid #FF8787;
-
+    
                             i {
                                 color: white;
                             }
                         }
                     }
+                }
             }
 
             .order-part {
                 margin-top: 5rem;
                 display: flex;
-                // justify-content: center;
                 align-items: center;
 
                 gap: 20px;
@@ -127,4 +149,5 @@
             }
         }
     }
+   }
 }
