--- a/src/sass/pages/_favorites.scss
+++ b/src/sass/pages/_favorites.scss
@@ -47,7 +47,7 @@
 
         .event-footer {
             display: flex;
-            justify-content: space-between;
+            justify-content:end;
             padding: 0.7rem 1rem;
             background-color: #f9f9f9;
             border-top: 1px solid #e0e0e0;
