--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -43,18 +43,17 @@
                     letter-spacing: 10px;
                     left: 50%;
                     transform: translate(-50%, -50%);
-                    -webkit-text-fill-color:transparent;
+                    -webkit-text-fill-color: transparent;
                     -webkit-text-stroke: 3px white;
                 }
 
                 .image {
-                    // height: 500px;
-                    width: 550px;
                     width: 100%;
                     height: 100vh;
                     overflow: hidden;
                     position: absolute;
-                   opacity: .5;
+                    opacity: .5;
+
                     img {
                         display: block;
                         width: 100%;
@@ -438,6 +437,44 @@
     }
 }
 
+@media (max-width:1200px) {
+    .slider-info {
+        height: 70vh;
+
+        .swiper {
+            .swiper-wrapper {
+                .swiper-slide {
+                    span {
+                        font-size: 150px;
+                    }
+
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:768px) {
+    .slider-info {
+        height: 50vh;
+
+        .swiper {
+            .swiper-wrapper {
+                .swiper-slide {
+                    span {
+                        font-size: 100px;
+                    }
+
+                }
+            }
+
+            .swiper-button-next,
+            .swiper-button-prev {
+                display: none;
+            }
+        }
+    }
+}
 
 @media (max-width: 991px) {
     .popularCategories {
@@ -530,6 +567,21 @@
 }
 
 @media (max-width: 576px) {
+    .slider-info {
+        height: 40vh;
+        .swiper {
+            .swiper-wrapper {
+                .swiper-slide {
+                    span {
+                        font-size: 50px;
+                    }
+
+                }
+            }
+
+        }
+    }
+
     .information-about-site {
         .info-cards {
             grid-template-columns: repeat(1, 1fr);
