--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./pages/eventDetail";
 @import "./pages/user";
 @import "./pages/admin";
+@import "./pages/admin-user";
 @import "./pages/basket";
 @import "./pages/login";
 @import "./pages/register";
